--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,13 @@ import numpy as np
 import select_image_trios
 
 """ Если честно,то я столько литературы перечитала,но нормального примера кода так и не нашла. 
-Венгерский метод - вообще жуть, но я думаю,что в моём случае подошла бы и редукция из Аварийного метода отождествления.
+Венгерский метод(сам медот,конечно, нетрудный, тем не менее для отождествления координат его применять...) - вообще жуть, 
+и я думаю,что в данном случае подошла бы и простая редукция из Аварийного метода отождествления.
 Тут - код,который я нашла на зарубежном сайте и его немного переделала,но так и не поняла,как вписать сюда наши данные. 
-Думаю, можно представить документы с данными,как каталоги, а потом попарно объеденить в одну таблицу.
-В общем, я сама не сильно поняла этот код(дословно перевести некоторые термины трудно) и ,скорее всего, баллы за это мне нельзя поставить,
-но я старалась. "
+Может быть можно представить документы с данными,как каталоги, а потом попарно объеденить в одну таблицу?
+В общем, я сама не сильно поняла этот код(возможно - это полный бред,ведь дословно перевести некоторые термины трудно)
+и баллы за это мне нельзя поставить,но я старалась, изучала вопрос и поняла,что легче использовать что-то типа CoLiTec,
+где можно с лёгкостью отождествить координаты объекта со снимка с каталогом"""
 
 
 def extract_star_catalog(params,filter_id,log):
